# axi-soc-ultra-plus-core

./: .gitignore  BuildYoctoProject.sh  CreateDiskImage.sh  CreatePetalinuxProject.sh  LICENSE.txt  README.md  rogue.bb  setup.py  xsct_debug_dump.tcl
.github/workflows/: docs.yml  release_ci.yml
Yocto-apps/axiversiondump/: axiversiondump.bb
Yocto-apps/pyrfdc/: pyrfdc.bb
conda-recipe/: meta.yaml
docs/: conf.py  index.rst  requirements.txt
docs/explanation/: architecture.rst  index.rst
docs/how-to/: index.rst  qspi_flash.rst  remote_bitstream_update.rst  rogue_gui_launch.rst  rogue_install.rst  sd_card_imaging.rst  xsct_boot_mode.rst
docs/reference/: index.rst  pyrogue_api.rst  register_map.rst  supported_boards.rst
docs/tutorial/: first_soc_bringup.rst  index.rst
hardware/RealDigitalRfSoC4x2/: ruckus.tcl
hardware/SlacHighMagRfSoc/: ruckus.tcl
hardware/SlacRfmcCarrier/: ruckus.tcl
hardware/SlacSpaceRfSocGen2/: ruckus.tcl
hardware/TrenzTe0835/: ruckus.tcl
hardware/XilinxKriaKr260/: ruckus.tcl
hardware/XilinxKriaKv260/: README.md  config  rootfs_config  ruckus.tcl
hardware/XilinxKriaLdmxZccm/: ruckus.tcl
hardware/XilinxZcu102/: ruckus.tcl
hardware/XilinxZcu111/: config  ruckus.tcl
hardware/XilinxZcu208/: config  ruckus.tcl
hardware/XilinxZcu216/: config  ruckus.tcl
hardware/XilinxZcu670/: config  (+1 more)
petalinux-apps/: rogue.bb  runtimeApp
petalinux-apps/pyrfdc/files/: CMakeLists.txt  PyRFdc.cpp  PyRFdc.h
roguetcpbridge/: roguetcpbridge.bb
script/: ZynqServer.py
scripts/: CreateDiskImage.sh  xsct_debug_dump.tcl
shared/: ruckus.tcl
(+288 files in other folders)
